Fix vertical overflow of checkbox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -62,5 +62,5 @@ ul {
 #todo-status {
     outline: transparent;
     accent-color: lime;
-    transform: scale(3);
+    transform: scale(2.5);
 }
